# rsvp

./: .gitignore  .prettierrc  README.md  bun.lockb  deploy.ts
.github/workflows/: azure-static-web-apps-victorious-forest-0a857cd1e.yml  azure-static-web-apps-victorious-island-0d8d9671e.yml  azure-static-web-apps-wonderful-ocean-089c6ae1e.yml
backend/: Cargo.toml
backend/src/: main.rs
client/: 404.html  bun.lockb  index.html  package.json  tailwind.config.js
client/src/: App.tsx  colors.ts  index.css  main.tsx  types.ts
client/src/components/: DateSelect.tsx  Footer.tsx  Header.tsx  Schedule.tsx  datepicker.tsx
client/src/contexts/: ScheduleContext.tsx  WebSocketContext.tsx
client/src/hooks/: useColorCalculation.tsx  useScheduleSelection.tsx
client/src/screens/: About.tsx  Create.tsx  Join.tsx
client/src/utils/: index.ts  schedule.tsx
frontend/: .gitignore  bun.lockb  index.ts  package.json  rollup.config.js  tailwind.config.cjs
frontend/public/: global.css  index.html
frontend/public/css/: output.css
frontend/public/js/: index.js  index.js.map
rsvp/: Cargo.toml
rsvp-web/: .env  404.html  bun.lockb  index.html  package.json  tailwind.config.js
rsvp-web/src/: App.tsx  Create.tsx  Footer.tsx  Header.tsx  colors.ts  index.css  types.ts  utils.ts
rsvp-web/src/components/: datepicker.tsx  schedule.tsx
rsvp/migrations/: 20240528073403_rsvp.sql
rsvp/src/: main.rs  utils.rs
server/: Cargo.toml
server/migrations/: 20240528073403_rsvp.sql  20260403_participants.sql  20260405_timezone.sql
server/src/: main.rs  models.rs  utils.rs
(+20 files in other folders)
