[package]
name = "rsvp"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-rustls", "mysql" ] }
dotenv = "0.15.0"
bincode = "1.3.3"
sha2 = "0.10.8"
num-bigint = "0.4.5"

[dependencies.uuid]
version = "1.8.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
